phpBB 3.0.6-RC3; pm_report_closed.txt, pm_report_deleted.txt dosyalarını eklemeyi unutmuşuz.

--- a/root/language/tr/email/forum_notify.txt
+++ b/root/language/tr/email/forum_notify.txt
@@ -2,7 +2,7 @@ Subject: {SITENAME} - izlediğiniz "{FORUM_NAME}" forumuna yeni ileti(ler) yazı
 
 Sayın {USERNAME},
 
-Bu e-posta, {SITENAME} mesaj panosunda abone olduğunuz "{FORUM_NAME}" forumuna yeni ileti(ler) yazıldığını haber vermek için sistem tarafından otomatik olarak gönderilmiştir.
+Bu e-posta, "{SITENAME}" mesaj panosunda abone olduğunuz "{FORUM_NAME}" forumuna yeni ileti(ler) yazıldığını haber vermek için sistem tarafından otomatik olarak gönderilmiştir.
 
 Abone olduğunuz forum: {FORUM_NAME}
 Yeni ileti(ler): {U_NEWEST_POST}
