--- a/root/language/tr/email/profile_send_email.txt
+++ b/root/language/tr/email/profile_send_email.txt
@@ -1,7 +1,7 @@
 
 Sayın {TO_USERNAME},
 
-Bu e-posta, {SITENAME} mesaj panosuna "{FROM_USERNAME}" kullanıcı adıyla üye olan kişi tarafından, {SITENAME} sistemi kullanılarak gönderilmiştir. Dikkatinize sunar, güzel günler dileriz.
+Bu e-posta, "{SITENAME}" mesaj panosuna "{FROM_USERNAME}" kullanıcı adıyla üye olan kişi tarafından, "{SITENAME}" sistemi kullanılarak gönderilmiştir. Dikkatinize sunar, güzel günler dileriz.
 
 {FROM_USERNAME} tarafından size gönderilen mesaj:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -10,6 +10,6 @@ Bu e-posta, {SITENAME} mesaj panosuna "{FROM_USERNAME}" kullanıcı adıyla üye
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-İlginizi çekebileceği düşünülen bu konu herhangi bir yetkili tarafından görülmemiş ve bu mesajın size gönderilmesi sırasında herhangi bir onay aşamasına dahil edilmemiştir. Eğer bu mesajdan rahatsız olduysanız, şikayetlerinizi {BOARD_EMAIL} adresine (size bu mesajı gönderen üyemizin kullanıcı adı ve e-posta adresini de belirtip) iletebilirsiniz.
+İlginizi çekebileceği düşünülen bu konu herhangi bir yetkili tarafından görülmemiş ve bu mesajın size gönderilmesi sırasında herhangi bir onay aşamasına dahil edilmemiştir. Eğer bu mesajdan rahatsız olduysanız, şikayetlerinizi "{BOARD_EMAIL}" adresine (size bu mesajı gönderen üyemizin kullanıcı adı ve e-posta adresini de belirtip) iletebilirsiniz.
 
 {EMAIL_SIG}
