--- a/root/language/tr/email/group_added.txt
+++ b/root/language/tr/email/group_added.txt
@@ -1,6 +1,6 @@
 Subject: {SITENAME} - "{GROUP_NAME}" grubuna dahil edildiniz
 
-Bu e-posta, {SITENAME} mesaj panosunda yer alan bir gruba dahil edildiğinizi haber vermek amacıyla sistem tarafından otomatik olarak gönderilmiştir.
+Bu e-posta, "{SITENAME}" mesaj panosunda yer alan bir gruba dahil edildiğinizi haber vermek amacıyla sistem tarafından otomatik olarak gönderilmiştir.
 
 Dahil edildiğiniz grup: {GROUP_NAME}
 Grup bilgileri: {U_GROUP}
