--- a/root/language/tr/email/newtopic_notify.txt
+++ b/root/language/tr/email/newtopic_notify.txt
@@ -2,7 +2,7 @@ Subject: {SITENAME} - "{FORUM_NAME}" forumuna yeni bir konu açıldı.
 
 Sayın {USERNAME},
 
-Bu e-posta, {SITENAME} mesaj panosunda yer alan "{FORUM_NAME}" forumunu izlemeye aldığınız için sistem tarafından otomatik olarak gönderilmiştir.
+Bu e-posta, "{SITENAME}" mesaj panosunda yer alan "{FORUM_NAME}" forumunu izlemeye aldığınız için sistem tarafından otomatik olarak gönderilmiştir.
 
 İzlemeye aldığınız forum: {U_FORUM}
 Foruma açılan yeni konu: {TOPIC_TITLE}
