--- a/root/language/tr/email/report_deleted.txt
+++ b/root/language/tr/email/report_deleted.txt
@@ -2,6 +2,6 @@ Subject: {SITENAME} - içerik raporunuz değerlendirildi ve silindi
 
 Sayın {USERNAME},
 
-{SITENAME} mesaj panosunda yer alan "{TOPIC_TITLE}" konusundaki "{POST_SUBJECT}" iletisinin içeriğini pano yönetimine rapor etmiştiniz. İsteğiniz üzerine ileti bir yetkili tarafından değerlendirilmiş ve gereken yapılarak raporunuz silinmiştir.
+"{SITENAME}" mesaj panosunda yer alan "{TOPIC_TITLE}" konusundaki "{POST_SUBJECT}" iletisinin içeriğini pano yönetimine rapor etmiştiniz. İsteğiniz üzerine ileti bir yetkili tarafından değerlendirilmiş ve gereken yapılarak raporunuz silinmiştir.
 
 {EMAIL_SIG}
