--- a/root/language/tr/email/user_reactivate_account.txt
+++ b/root/language/tr/email/user_reactivate_account.txt
@@ -1,6 +1,6 @@
 Subject: {SITENAME} panosundaki hesabınız pasif edildi
 
-Kullanıcı adını {USERNAME} olan hesabınız pano yöneticisi tarafından pasif edildi. Hesabınız şu anda aktif değildir. Üyeliğinizi kullanılabilir hale getirmek için aşağıdaki bağlantıyı kullanabilirsiniz.
+Kullanıcı adını "{USERNAME}" olan hesabınız pano yöneticisi tarafından pasif edildi. Hesabınız şu anda aktif değildir. Üyeliğinizi kullanılabilir hale getirmek için aşağıdaki bağlantıyı kullanabilirsiniz.
 
 Üyelik aktivasyonu: {U_ACTIVATE}
 
