--- a/root/language/tr/email/user_remind_inactive.txt
+++ b/root/language/tr/email/user_remind_inactive.txt
@@ -2,7 +2,7 @@ Subject: {SITENAME} - üyelik başvurunuzu tamamlamamışsınız
 
 Sayın {USERNAME},
 
-{REGISTER_DATE} tarihinde {SITENAME} sitesine gerçekleştirilen üyelik başvurunuz hala tamamlanmamış. Üyeliğinizi kullanılabilir hale getirmek için aşağıdaki bağlantıyı kullanabilirsiniz.
+"{REGISTER_DATE}" tarihinde "{SITENAME}" sitesine gerçekleştirilen üyelik başvurunuz hala tamamlanmamış. Üyeliğinizi kullanılabilir hale getirmek için aşağıdaki bağlantıyı kullanabilirsiniz.
 
 Üyelik aktivasyonu: {U_ACTIVATE}
 
