--- a/root/language/tr/email/installed.txt
+++ b/root/language/tr/email/installed.txt
@@ -2,7 +2,7 @@ Subject: phpBB3 yazılımı kuruldu
 
 Tebrikler, phpBB3 yazılımı sunucunuza kuruldu.
 
-Bu e-posta kurulum ve panoya giriş için önemli bilgiler içerir. Parolanız sizin dışınızda (pano yöneticileri dahil) hiç kimse tarafından görülemez/bilinemez. Eğer parolanızı unutursanız, mesaj panomuza oturum açtığınız sayfa aracılığıyla sistemden yeni bir parola talebinde bulunabilirsiniz.
+Parolanız veritabanında güvenli bir biçimde saklanmakta ve tekrar elde edilemez, yöneticiler dahil hiç kimse tarafından bilinemez. Eğer parolanızı unutursanız, mesaj panomuza oturum açtığınız sayfa aracılığıyla sistemden yeni bir parola talebinde bulunabilirsiniz.
 
 Kullanıcı adı: {USERNAME}
 Pano adresi: {U_BOARD}
