--- a/root/language/tr/email/admin_welcome_activated.txt
+++ b/root/language/tr/email/admin_welcome_activated.txt
@@ -4,6 +4,8 @@ Sayın {USERNAME},
 
 Bu e-posta, "{SITENAME}" mesaj panosunda yer alan hesabınızın etkinleştirilerek kullanıma açıldığını haber vermek amacıyla sistem tarafından otomatik olarak gönderilmiştir. Daha önce belirlediğiniz kullanıcı adı ve parolanızla oturum açabilirsiniz.
 
+Parolanız veritabanında güvenli bir biçimde saklanmakta ve tekrar elde edilemez, yöneticiler dahil hiç kimse tarafından bilinemez. Eğer parolanızı unutursanız, mesaj panomuza oturum açtığınız sayfa aracılığıyla sistemden yeni bir parola talebinde bulunabilirsiniz.
+
 Bizimle olduğunuz için teşekkür ederiz.
 
 {EMAIL_SIG}
