--- a/root/language/tr/email/coppa_resend_inactive.txt
+++ b/root/language/tr/email/coppa_resend_inactive.txt
@@ -36,7 +36,7 @@ Tarih     : _____________________
 
 Bu form yöneticiler tarafından faks yada normal posta yolu ile alındıktan sonra, hesabınız aktif hâle getirilecektir.
 
-Parolanız sizin dışınızda (pano yöneticileri dahil) hiç kimse tarafından görülemez/bilinemez. Eğer parolanızı unutursanız, mesaj panomuza oturum açtığınız sayfa aracılığıyla sistemden yeni bir parola talebinde bulunabilirsiniz.
+Parolanız veritabanında güvenli bir biçimde saklanmakta ve tekrar elde edilemez, yöneticiler dahil hiç kimse tarafından bilinemez. Eğer parolanızı unutursanız, mesaj panomuza oturum açtığınız sayfa aracılığıyla sistemden yeni bir parola talebinde bulunabilirsiniz.
 
 Kayıt olduğunuz için teşekkürler.
 
