--- a/root/language/tr/email/user_reactivate_account.txt
+++ b/root/language/tr/email/user_reactivate_account.txt
@@ -4,6 +4,6 @@ Kullanıcı adını "{USERNAME}" olan hesabınız pano yöneticisi tarafından p
 
 Üyelik aktivasyonu: {U_ACTIVATE}
 
-Parolanız sizin dışınızda (pano yöneticileri dahil) hiç kimse tarafından görülemez/bilinemez. Eğer parolanızı unutursanız, mesaj panomuza oturum açtığınız sayfa aracılığıyla sistemden yeni bir şifre talebinde bulunabilirsiniz.
+Parolanız veritabanında güvenli bir biçimde saklanmakta ve tekrar elde edilemez, yöneticiler dahil hiç kimse tarafından bilinemez. Eğer parolanızı unutursanız, mesaj panomuza oturum açtığınız sayfa aracılığıyla sistemden yeni bir parola talebinde bulunabilirsiniz.
 
 {EMAIL_SIG}
