--- a/root/language/tr/email/privmsg_notify.txt
+++ b/root/language/tr/email/privmsg_notify.txt
@@ -6,7 +6,7 @@ Bu e-posta, "{SITENAME}" mesaj panosunda yer alan hesabınıza yeni bir özel me
 
 Özel mesajı gönderen: {AUTHOR_NAME}
 Mesajın başlığı: {SUBJECT}
-Mesaj kutunuz: {U_INBOX}
+Mesaj: {U_VIEW_MESSAGE}
 
 Hesabınıza yeni bir özel mesaj gönderildiğinde e-posta ile haberdar edilmek istemiyorsanız, bunu hesabınızdaki ilgili seçeneklerden her zaman değiştirebileceğinizi unutmayınız.
 
